# experiments-with-triton

./: .gitignore  CMakeLists.txt  README.md  out_return.txt  sample.py  sample_ir.txt  triton2ir.py
docs/: passes-description.md  passes.txt  triton_opt_driver.txt
examples/: 1_vector_addition.py  return_ir.py
examples/kernels/: README.md  binary_ops.py
ir_dumps/: add_2d_coalesced.mlir  add_2d_uncoalesced.mlir  add_op.mlir  mm_op.mlir
tools/: CMakeLists.txt  analysis.cpp  parse_blocked.py  sample_gpu.mlir  triton-opt-commands.md
